--- a/BookClub/Views/Book/GetAllBooks.cshtml
+++ b/BookClub/Views/Book/GetAllBooks.cshtml
@@ -20,45 +20,61 @@
         </ul>
     </div>*@
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-    <thead>
-        <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Genre</th>
-            <th>Blurb</th>
+@using (Html.BeginForm("GetAllBooks", "Book", FormMethod.Get))
+{
 
-        </tr>
-    </thead>
+    <b> Search By </b> @Html.RadioButton("option", "Title") <text>Title</text> @Html.RadioButton("option", "Genre") <text> Genre </text>
+        @Html.RadioButton("option", "Author")<text>Author</text> @Html.TextBox("search") <input type = "submit" name ="submit" value = "Search" />
+        }
 
-    @foreach (var item in Model)
-    {
-    <tr>
+        <table class="table">
+            <tr>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Genre</th>
+                    <th>Blurb</th>
 
-        <td>
-            <img src="@Html.DisplayFor(modelItem => item.Image)" class="imageCell" />
-        </td>
-        <td>
-            @Html.ActionLink(item.Title, "GetBookId",
-               new { id = item.Id , Controller = "Book" })
-        </td>
-        <td>
-            @Html.ActionLink(item.Author.Name, "GetAuthor",
-              new { id = item.Id , Controller = "Author" })
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Genre.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Blurb)
-        </td>
-    </tr>
-    }
+                </tr>
+            </thead>
 
-</table>
+            @if (Model.Count() == 0)
+            {
+                <tr>
+                    <td colspan="3" style="color:red" draggable="auto">
+                        Not available at MyBookBuddy
+                    </td>
+                </tr>
+            }
+
+            else
+            {
+                foreach (var item in Model)
+                {
+                    <tr>
+
+                        <td>
+                            <img src="@Html.DisplayFor(modelItem => item.Image)" class="imageCell" />
+                        </td>
+                        <td>
+                            @Html.ActionLink(item.Title, "GetBookId",
+                                new { id = item.Id, Controller = "Book" })
+                        </td>
+                        <td>
+                            @Html.ActionLink(item.Author.Name, "GetAuthor",
+                               new { id = item.Id, Controller = "Author" })
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Genre.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Blurb)
+                        </td>
+                    </tr>
+                }
+            }
+
+        </table>
 
