Automatically assigns UserId to Add Challenge

--- a/BookClub/Views/Book/GetAllBooks.cshtml
+++ b/BookClub/Views/Book/GetAllBooks.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Welcome To MyBookBuddy</h2>
 
+@Html.ActionLink("Add Challenge", "AddChallenge", "Challenge")
+
 <div class="alert alert-success">
     <strong>Sign Up Today:</strong> @Html.ActionLink("Join Our Community", "GetAllDiscussions", "Book")
 </div>
