--- a/BookClub/Views/Book/GetDiscussionsbyBook.cshtml
+++ b/BookClub/Views/Book/GetDiscussionsbyBook.cshtml
@@ -7,7 +7,7 @@
 <h2>GetDiscussionsbyBook</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    
 </p>
 <table class="table">
     <tr>
@@ -53,6 +53,9 @@
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+        </td>
+        <td>
+            @Html.ActionLink("Create New", "AddDiscussion", "Admin", new { id = item.Books.Id }, null)
         </td>
     </tr>
 }
