Finalised discussions under book & posts under discussions (working correctly).

--- a/BookClub/Views/Book/GetBookId.cshtml
+++ b/BookClub/Views/Book/GetBookId.cshtml
@@ -65,5 +65,5 @@
             </tr>
         }*@
 
-    @Html.ActionLink("See Discussion", "GetDiscussionsByBook",
+    @Html.ActionLink("See Discussion", "GetB",
               new { id=Model.Id , Controller="Book" }) |
