Added challenge progress bar and checkbox functionality

--- a/BookClub/Views/Challenge/GetChallenges.cshtml
+++ b/BookClub/Views/Challenge/GetChallenges.cshtml
@@ -4,11 +4,7 @@
     ViewBag.Title = "GetChallenges";
 }
 
-@*<h2>GetChallenges</h2>
-
-    <p>
-            @Html.ActionLink("Add Challenge", "AddChallenge", "Challenge")
-        </p>*@
+<h2>My Isolation Challenges</h2>
 
 <div id="tableDiv"></div>
 <div id="challengeCreateForm">
