--- a/BookClub/Views/Challenge/GetChallenges.cshtml
+++ b/BookClub/Views/Challenge/GetChallenges.cshtml
@@ -4,11 +4,7 @@
     ViewBag.Title = "GetChallenges";
 }
 
-@*<h2>GetChallenges</h2>
-
-    <p>
-            @Html.ActionLink("Add Challenge", "AddChallenge", "Challenge")
-        </p>*@
+<h2>My Isolation Challenges</h2>
 
 <div id="tableDiv"></div>
 <div id="challengeCreateForm">
@@ -28,26 +24,26 @@
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
-        
-       @* <div class="form-group">
-            @Html.AntiForgeryToken()
-            @Html.LabelFor(model => model.From, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.From, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.From, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.AntiForgeryToken()
-            @Html.LabelFor(model => model.Until, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Until, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Until, "", new { @class = "text-danger" })
+        @* <div class="form-group">
+                @Html.AntiForgeryToken()
+                @Html.LabelFor(model => model.From, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.From, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.From, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div> *@
 
-        
+            <div class="form-group">
+                @Html.AntiForgeryToken()
+                @Html.LabelFor(model => model.Until, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Until, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Until, "", new { @class = "text-danger" })
+                </div>
+            </div> *@
+
+
     }
 </div>
 
