added community controller with home page & recent posts

--- a/BookClub/Views/Book/GetB.cshtml
+++ b/BookClub/Views/Book/GetB.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BookClub.Models.BookDiscussionModel
 
-<h2>View What's being said about this Book | @Model.Book.Title</h2>
+<h2>View Discussions | @Model.Book.Title</h2>
 
 
     <p>
