Added J-Query for star rating function

--- a/BookClub/Views/Review/GetReviewByBook.cshtml
+++ b/BookClub/Views/Review/GetReviewByBook.cshtml
@@ -4,6 +4,46 @@
     ViewBag.Title = "GetReview";
 }
 
+<script type="text/javascript">
+    function CRateOut(rating) {
+        for (var i = 1; i <= rating; i++) {
+            $("#span" + i).attr('class', 'glyphicon glyphicon-star-empty');
+        }
+    }
+
+    function CRateOver(rating) {
+        for (var i = 1; i <= rating; i++) {
+            $("#span" + i).attr('class', 'glyphicon glyphicon-star');
+        }
+    }
+
+    function CRateClick(rating) {
+        $("#labelRating").val(rating);
+        for (var i = 1; i <= rating; i++) {
+            $("#span" + i).attr('class', 'glyphicon glyphicon-star');
+        }
+        for (var i = rating + 1; i <= 5; i++) {
+            $("#span" + i).attr('class', 'glyphicon glyphicon-star-empty');
+
+        }
+    }
+
+    function CRateSelected() {
+        var rating = $("#labelRating").val();
+        for (var i = 1; i <= rating; i++) {
+            $("#span" + i).attr('class', 'glyphicon glyphicon-star');
+        } 
+    }
+
+    @* If User doesn't select star for rating, error messag displays*@ 
+    function VerifyRating() {
+        var rating = $("#labelRating").val();
+        if (rating == "0") {
+            alert("Please Select Rating");
+            return false;
+        }
+    }
+</script>
 
 <h2>GetReview</h2>
 
@@ -13,12 +53,22 @@
 }
 <h3>Please enter your comments</h3>
 
-@using (Html.BeginForm("AddReview", "Review", FormMethod.Post, new { }))
+@using (Html.BeginForm("AddReview", "Review", FormMethod.Post, new {onsubmit = "return VerifyRating()"}))
 {
+    @* Allows user to hover over star rating*@
     <textarea rows="6" cols="50" name="bookContent" id="txtBookContent"></textarea>
-    <span id="span1" class="glyphicon glyphicon-star-empty"></span>
-    <span id="span2" class="glyphicon glyphicon-star-empty"></span>
-    <span id="span3" class="glyphicon glyphicon-star-empty"></span>
-    <span id="span4" class="glyphicon glyphicon-star-empty"></span>
-    <span id="span5" class="glyphicon glyphicon-star-empty"></span>
+    <div onmouseout="CRateSelected()">
+        <span id="span1" onmouseout="CRateOut(1)" onmouseover="CRateOver(1)" onclick="CRateClick(1)" class="glyphicon glyphicon-star-empty"></span>
+        <span id="span2" onmouseout="CRateOut(2)" onmouseover="CRateOver(2)" onclick="CRateClick(2)" class="glyphicon glyphicon-star-empty"></span>
+        <span id="span3" onmouseout="CRateOut(3)" onmouseover="CRateOver(3)" onclick="CRateClick(3)" class="glyphicon glyphicon-star-empty"></span>
+        <span id="span4" onmouseout="CRateOut(4)" onmouseover="CRateOver(4)" onclick="CRateClick(4)" class="glyphicon glyphicon-star-empty"></span>
+        <span id="span5" onmouseout="CRateOut(5)" onmouseover="CRateOver(5)" onclick="CRateClick(5)" class="glyphicon glyphicon-star-empty"></span>
+    </div>
+    <div>
+        <input type="hidden" id="labelRating" value="0"/>
+    </div>
+    <div>
+        <input type="submit" class="btn btn-primary active" name="SaveReview" value="Save Review" />
+    </div>
+
 }
