Fully functional review system using javascript

--- a/BookClub/Views/Review/_ReviewContentPartial.cshtml
+++ b/BookClub/Views/Review/_ReviewContentPartial.cshtml
@@ -5,10 +5,15 @@
         <td>
             @Model.DateCreated.ToString("dd-MM-yyyy")
         </td>
-    </tr> 
+    </tr>
     <tr>
         <td>
             @Model.ReviewContent
+        </td>
+    </tr>
+    <tr>
+        <td>
+            @Model.AuthorName
         </td>
     </tr>
     <tr>
