--- a/BookClub/Views/Review/GetReviewByBook.cshtml
+++ b/BookClub/Views/Review/GetReviewByBook.cshtml
@@ -1,8 +1,6 @@
 ﻿@model IEnumerable<BookClub.Models.Review.ReviewViewModel>
 
-@{
-    ViewBag.Title = "GetReview";
-}
+<h2>Reviews</h2>
 
 <script type="text/javascript">
     function CRateOut(rating) {
@@ -32,10 +30,10 @@
         var rating = $("#labelRating").val();
         for (var i = 1; i <= rating; i++) {
             $("#span" + i).attr('class', 'glyphicon glyphicon-star');
-        } 
+        }
     }
 
-    @* If User doesn't select star for rating, error messag displays*@ 
+    @* If User doesn't select star for rating, error message displays*@
     function VerifyRating() {
         var rating = $("#labelRating").val();
         if (rating == "0") {
@@ -53,10 +51,14 @@
 }
 <h3>Please enter your comments</h3>
 
-@using (Html.BeginForm("AddReview", "Review", FormMethod.Post, new {onsubmit = "return VerifyRating()"}))
+@using (Html.BeginForm("AddReview", "Review", FormMethod.Post, new { onsubmit = "return VerifyRating()" }))
 {
-    @* Allows user to hover over star rating*@
+    @*Creates text area for the user to leave a review*@
+
     <textarea rows="6" cols="50" name="bookContent" id="txtBookContent"></textarea>
+
+    @*Displays 5 stars which the user can click*@
+
     <div onmouseout="CRateSelected()">
         <span id="span1" onmouseout="CRateOut(1)" onmouseover="CRateOver(1)" onclick="CRateClick(1)" class="glyphicon glyphicon-star-empty"></span>
         <span id="span2" onmouseout="CRateOut(2)" onmouseover="CRateOver(2)" onclick="CRateClick(2)" class="glyphicon glyphicon-star-empty"></span>
@@ -64,9 +66,15 @@
         <span id="span4" onmouseout="CRateOut(4)" onmouseover="CRateOver(4)" onclick="CRateClick(4)" class="glyphicon glyphicon-star-empty"></span>
         <span id="span5" onmouseout="CRateOut(5)" onmouseover="CRateOver(5)" onclick="CRateClick(5)" class="glyphicon glyphicon-star-empty"></span>
     </div>
+
     <div>
-        <input type="hidden" id="labelRating" value="0"/>
+        <input type="hidden" name="rating" id="labelRating" value="0" />
     </div>
+    <div>
+        <input type="hidden" name="id" id="labelRating" value="@ViewBag.BookId" />
+    </div>
+
+    @* Adds a Submit button which redirects to reviews page *@
     <div>
         <input type="submit" class="btn btn-primary active" name="SaveReview" value="Save Review" />
     </div>
