Edited GetDiscussionsByBook .cshtml - implemented searchbar (not functionig yet) - added some css

--- a/BookClub/Views/Community/Index.cshtml
+++ b/BookClub/Views/Community/Index.cshtml
@@ -5,7 +5,7 @@
         <div class="frontheading">Welcome to our BookClub Community</div>
         <p class="subheading">Join the latest discussions about the books you love</p>
 
-            <form asp-controller="Search" asp-action"Search" method="post">
+            <form asp-controller="Search" asp-action="Search" method="post">
                 <input asp-for="SearchQuery" type="text" class="communitySearch" placeholder="Search..." />
             </form>
         </div>
