--- a/BookClub/Views/Book/GetB.cshtml
+++ b/BookClub/Views/Book/GetB.cshtml
@@ -33,7 +33,7 @@
             <tr>
                 <td>
 
-                    @Html.ActionLink(discussion.Title, "GetD",
+                    @Html.ActionLink(discussion.Title, "GetPostsByDiscussion",
 
                         new { id = discussion.Id , Controller = "Discussion" })
                 </td>
