--- a/BookClub/Views/Discussion/GetAllDiscussions.cshtml
+++ b/BookClub/Views/Discussion/GetAllDiscussions.cshtml
@@ -13,7 +13,7 @@
         {
             <tr>
                 <td>
-                    @Html.ActionLink(item.Title, "GetD",
+                    @Html.ActionLink(item.Title, "GetPostsByDiscussion",
 
                     new { id = item.Id , Controller = "Discussion" })
                 </td>
