--- a/BookClub/Views/Post/GetPost.cshtml
+++ b/BookClub/Views/Post/GetPost.cshtml
@@ -9,7 +9,7 @@
             
             <h4>
                 Go back to the
-                @Html.ActionLink(Model.Discussion.Title, "GetD",
+                @Html.ActionLink(Model.Discussion.Title, "GetPostsByDiscussion",
 
              new { id = Model.Discussion.Id, Controller = "Discussion" })
                 discussion
