--- a/BookClub/Views/Challenge/_ChallengeTable.cshtml
+++ b/BookClub/Views/Challenge/_ChallengeTable.cshtml
@@ -13,7 +13,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.Completed)
         </th>
         <th>
@@ -24,9 +24,10 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Book.Title)
-        </th>
-
+        </th>*@
         <th></th>
+        <th></th>
+        
     </tr>
 
     @foreach (var item in Model)
@@ -46,7 +47,7 @@
             <td>
                 @Html.CheckBoxFor(modelItem => item.Completed, new { id = item.Id, @class = "ActiveCheck" })
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.From)
             </td>
             <td>
@@ -54,11 +55,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Book.Title)
-            </td>
+            </td>*@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Delete", "DeleteChallenge",
+               new { id = item.Id , Controller = "Challenge" })
             </td>
         </tr>
     }
